# Social_Media_API

./: Dockerfile  README.md  manage.py  pyproject.toml  render.yaml  requirements.txt
api/: admin.py  serializers.py  tests.py  views.py
api/migrations/: 0003_alter_comment_post_alter_comment_user_and_more.py  0004_alter_post_unique_together.py
social-api/: pyproject.toml
social_home/: requirements.txt  settings.py  urls.py
social_home/api/: models.py  serializers.py  urls.py  views.py
social_home/api/migrations/: 0001_initial.py  0002_alter_comment_post_alter_comment_user_and_more.py
social_home/social_home/: asgi.py  settings.py  urls.py  wsgi.py
