[tool.poetry]
name = "SOCIAL_MEDIA_API"
version = "0.1.0"
description = ""
authors = ["naveenlingala <naveenlingala1212@gmail.com>"]
readme = "README.md"
packages = [{include = "SOCIAL_MEDIA_API"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
